[package]
name = "fungible-token"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "1c5106bf0b3380d66d2689174f5e50b612101331" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", rev = "1c5106bf0b3380d66d2689174f5e50b612101331" }

